# raise_your_hack_25

./: .gitignore  LICENSE  README.md  deploy.sh  start_services.sh  stop_services.sh
agent_service/: .env.example  LOGGING_IMPLEMENTATION.md  README.md  chat_history_visual_flow.py  conversation_awareness_summary.py  demo_intelligence_improvements.py  explain_chat_history_flow.py  main.py  pyproject.toml  quick_test.py  requirements.txt  test_agent_scenarios.py  test_complexity_analysis.py  test_conversation_awareness.py  test_logging.py  validate_conversation_logic.py
agent_service/src/agents/: __init__.py  architecture_agent.py  base_agent.py  business_impact_agent.py  documentation_agent.py  educational_agent.py  orchestrator.py  requirements_agent.py  research_agent.py  why_reasoning_agent.py
agent_service/src/api/: main.py  routes.py
agent_service/src/config/: settings.py
agent_service/src/models/: __init__.py  agent_models.py
agent_service/src/services/: __init__.py  groq_service.py  simple_groq_service.py  simple_tavily_service.py  tavily_service.py
agent_service/src/utils/: logging_config.py
agent_service/src/workflows/: __init__.py  sequential_workflow.py
backend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  update-env.sh
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
frontend/: .env.example  README.md  package-lock.json  package.json
requirements/: Agentic Architect: Refined Product Concept.md  agent_service_roadmap.md  backend_roadmap.md  coordination_master.md  frontend_roadmap.md
(+21 files in other folders)
